fix smaller logo image alignment

--- a/screen.css
+++ b/screen.css
@@ -655,3 +655,17 @@ h2{
   padding-top: 2vh;
 
 }
+
+#manures{
+
+  padding-bottom:10vh;
+  padding-top: 10vh;
+
+}
+
+#chihack{
+
+  padding-top: 16vh;
+  padding-bottom: 16vh;
+
+}
